--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -24,7 +24,7 @@ Journals should incorporate a [**data availability statement**](/docs/data_avail
 
 ## 4. Link Datasets to Articles in Crossref DOI Metadata
 
-Journals should enhance Crossref DOI metadata by linking articles to datasets using information from data availability statements. By incorporating DOIs and repository names into Crossref metadata according to [FAIR principles](/docs/fair/), journals establish structured links between article DOIs and dataset DOIs—ensuring both humans and machines can interpret these relationships effectively.
+Journals should enhance Crossref DOI metadata by linking articles to datasets using information from data availability statements. By incorporating DOIs and repository names into Crossref metadata according to [FAIR principles](/docs/fair/), journals establish **structured links between article DOIs and dataset DOIs**—ensuring both humans and machines can interpret these relationships effectively.
 
 In agreement with [Crossref's documentation on linking datasets](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/), use the relationship type `isSupplementedBy`.
 
