--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -11,35 +11,35 @@ This guide is based on our standards for data publishing for infrastructure prov
 
 ## 1. Metadata Should Be Part of a Dataset
 
-Research data repositories should include standardised, machine-readable metadata in datasets downloaded by researchers and exchanged with other resources. Generic and technical metadata are  associated with the dataset during its upload process, while domain-specific repositories extract metadata from analytical data files provided by researchers along their lab workflows (e.g., Chemotion ELN). Once data is retrieved, this metadata should remain intact in the downloaded package, with descriptive DataCite metadata as a minimum requirement. One solution to ensure reliable file transfer is to use [BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), which enables inclusion of metadata in downloaded datasets.
+Research data repositories should include standardised, machine-readable metadata in datasets downloaded by researchers and exchanged with other resources. Generic and technical metadata are  associated with the dataset during its upload process, while domain-specific repositories extract metadata from analytical data files provided by researchers along their lab workflows (e.g., [Chemotion ELN](https://chemotion.net/)). Once data is retrieved, this metadata should remain intact in the downloaded package, with descriptive [DataCite](https://datacite.org/) metadata as a minimum requirement. One solution to ensure reliable file transfer is to use [BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), which enables inclusion of metadata in downloaded datasets.
 
 ## 2. Incorporate Structured Domain-Specific Metadata
 
 Research data repositories should incorporate structured, domain-specific metadata in datasets downloaded by researchers and exchanged with other resources. Beyond generic schemes like [DataCite's metadata schema](https://schema.datacite.org/), including Schema.org metadata through tools like [RO-Crate](https://www.researchobject.org/) or combining RO-Crate with BagIt enhances both reliability and richness of metadata. By including information on context of a particular domain, domain-specific metadata enhance data relevance, accuracy, and consequently re-usability.
 
-## 3. Provide Collection DOIs to Wrap Multiple Datasets
+## 3. Inform Authors on Legal Issues on Dataset Abstracts 
 
-Research data repositories should provide a Collection DOI that wraps relevant research data objects associated with a single article intended for publication. While field-specific repositories may offer DOIs for individual chemical reactions or molecules, multidisciplinary repositories provide DOIs for entire published datasets. To facilitate manuscript submission processes, each repository should enable authors to generate a [**Collection DOI**](https://chemotion.net/docs/repo/doi) that encompasses pertinent data referenced in their data availability statements.
+Repositories should inform authors about possible rights conflicts when using related article abstracts as descriptions within dataset fields; separate descriptions are recommended instead due copyright concerns.
 
-## 4. Provide Access to Metadata During Embargo Period
+## 4. Group Licenses According to Type
 
-Datasets published under an embargo period should restrict access to the dataset while ensuring that its metadata remains accessible—*publish* with embargo. This practice allows relevant information about the dataset to be retrievable while adhering to FAIR principles ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), granting authors first rights to their data.
+[Licenses](/licences) offered by research data repositories should be grouped into categories distinguishing between research data licenses and software licenses; this simplifies selection processes for users navigating lengthy lists.
 
-## 5. Utilize Scholix.org Framework
+## 5. Encourage Creative Commons Licenses 
 
-Research data repositories should contribute to and utilize [Scholix.org](https://scholexplorer.openaire.eu/) as it provides a framework for improving links between scientific literature and research data across various digital objects. Scholix hubs such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/) contribute valuable information on connected digital objects, allowing academic publishers to discover corresponding datasets even after articles have been published.
+To streamline license selection, infrastructure providers should direct authors towards opting for [Creative Commons licenses](https://creativecommons.org/share-your-work/cclicenses/) when publishing research data—licensing options no more restrictive than [CC BY](https://creativecommons.org/licenses/by/4.0/) are strongly recommended.
 
-## 6. Provide Access to Read-Only Datasets Under Review
+## 6. Promote Least Restrictive Creative Commons Licenses 
 
-To facilitate inclusion of datasets in manuscript review processes, research data repositories should provide access to datasets under review through an accessible URL while maintaining non-editable status until publication occurs.
+To foster openness within shared datasets—repositories ought suggest licenses (such as [CC0](https://creativecommons.org/publicdomain/zero/1.0/) or [CC BY](https://creativecommons.org/licenses/by/4.0/)) on handling data over more restrictive alternatives like [CC BY-SA](https://creativecommons.org/licenses/by-nc/4.0/) or [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) which may inhibit reuse opportunities; shared works ought be **as open as possible**, allowing others maximum freedom in utilization efforts!
 
-## 7. Utilize URLs for Reviewer Access 
+## 7. Creators, Authors, and Contributors 
 
-URLs accessing datasets under review should have access credentials encoded within them rather than requiring separate login information—this avoids potential errors during communication between reviewers and submission systems.
+Researchers typically refer to individuals involved in the publication of results as authors, particularly when working with scientific publishers. However, [DataCite](https://datacite.org/) differentiates between authors and contributors, with contributors being assigned specific roles. To minimize confusion for researchers publishing their data, repositories should assist by labeling the field for creators in their (DataCite) metadata editors as **_Authors/Creators_**. 
 
 ## 8. Include Publisher Information in DataCite Metadata
 
-Research data repositories should include their name as 'publisher' along with a 'publisherIdentifier' in each dataset's DataCite metadata fields automatically populated by the repository system without user edits allowed.
+Research data repositories should include their name as `'publisher'` along with a `'publisherIdentifier'` in each dataset's DataCite metadata fields automatically populated by the repository system without user edits allowed.
 
 ### Example:
 >Publisher: RADAR4Chem
@@ -57,29 +57,29 @@ In XML:
 
 This ensures clear identification of where each dataset has been published both for humans and machines alike.
 
-## 9. Allow Metadata Corrections and Updates 
+## 9. Provide Collection DOIs to Wrap Multiple Datasets
 
-Research data repositories should permit researchers to correct and update metadata due to potential errors during initial entry— Data/Metadata versioning may enhance transparency regarding changes made over time while enriching overall dataset descriptions according to FAIR principles ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)).
+Research data repositories should provide a Collection DOI that wraps relevant research data objects associated with a single article intended for publication. While field-specific repositories may offer DOIs for individual chemical reactions or molecules, multidisciplinary repositories provide DOIs for entire published datasets. To facilitate manuscript submission processes, each repository should enable authors to generate a [**Collection DOI**](https://chemotion.net/docs/repo/doi) that encompasses pertinent data referenced in their [data availability statements](/docs/data_availability_statement).
 
-## 10. Inform Authors on Legal Issues on Dataset Abstracts 
+## 10. Provide Access to Read-Only Datasets Under Review
 
-Repositories should inform authors about possible rights conflicts when using related article abstracts as descriptions within dataset fields; separate descriptions are recommended instead due copyright concerns.
+To facilitate inclusion of datasets in manuscript review processes, research data repositories should provide access to datasets under review through an accessible URL while maintaining non-editable status until publication occurs.
 
-## 11. Group Licenses According to Type
+## 11. Utilize URLs for Reviewer Access 
 
-Licenses offered by research data repositories should be grouped into categories distinguishing between research data licenses and software licenses; this simplifies selection processes for users navigating lengthy lists.
+URLs accessing datasets under review should have access credentials encoded within them rather than requiring separate login information—this avoids potential errors during communication between reviewers and submission systems.
 
-## 12. Encourage Creative Commons Licenses 
+## 12. Allow Metadata Corrections and Updates 
 
-To streamline license selection, infrastructure providers should direct authors towards opting for Creative Commons licenses when publishing research data—licensing options no more restrictive than CC BY are strongly recommended.
+Research data repositories should permit researchers to correct and update metadata due to potential errors during initial entry—Data/Metadata versioning may enhance transparency regarding changes made over time while enriching overall dataset descriptions according to [FAIR principles](/docs/fair/) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)). This also llows authors to update datasets with correspnding article DOIs in cases where the data has been published before article acceptance or publication.
 
-## 13. Promote Least Restrictive Creative Commons Licenses 
+## 13. Provide Access to Metadata During Embargo Period
 
-To foster openness within shared datasets—repositories ought suggest licenses (such as CC0 or CC BY) on handling data over more restrictive alternatives like CC BY-SA or CC BY-NC-ND which may inhibit reuse opportunities; shared works ought be **as open as possible**, allowing others maximum freedom in utilization efforts!
+Datasets published under an embargo period should restrict access to the dataset while ensuring that its metadata remain accessible—*publish* with embargo. This practice allows relevant information about the dataset to be retrievable, in accordance to [FAIR principles](/docs/fair/) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while granting authors first rights to their data.
 
-## 14. Creators, Authors, and Contributors 
+## 14. Utilize Scholix.org Framework
 
-Researchers typically refer to individuals involved in the publication of results as authors, particularly when working with scientific publishers. However, DataCite differentiates between authors and contributors, with contributors being assigned specific roles. To minimize confusion for researchers publishing their data, repositories should assist by labeling the field for creators in their (DataCite) metadata editors as **_Authors/Creators_**. 
+Research data repositories should contribute to and utilize [Scholix.org](https://scholexplorer.openaire.eu/) as it provides a framework for improving links between scientific literature and research data across various digital objects. Scholix hubs such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/) contribute valuable information on connected digital objects, allowing academic publishers to discover corresponding datasets even after articles have been published.
 
 ## Resources and Further Reading
 
@@ -92,18 +92,19 @@ Researchers typically refer to individuals involved in the publication of result
 
 1. _Research data repositories should include the metadata in datasets downloaded by researchers and exchanged with other resources._
 2. _Research data repositories should include structured, domain-specific metadata in datasets downloaded by researchers and exchanged with other resources._
-3. _Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to a single article that is to be published._
-4. _Datasets published with an embargo period should have inaccessible data but accessible metadata._
-5. _Research data repositories should contribute and use to Scholix.org._
-6. _Research data repositories should provide access to datasets under review._
-7. _*URLs to access datasets under review should have the access credentials encoded within the URL._
+3. _Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the datasets DataCite metadata._
+4. _In research data repositories, licences should be grouped into research data licences and software licences._
+5. _Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice._
+6. _Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can inhibit reuse._
+7. _Research data repositories should label fields for creators in their (DataCite) metadata editor as* Authors/Creators._
 8. _Research data repositories should provide the repository name as 'publisher' as well as a 'publisherIdentifier' in a dataset's DataCite metadata._
-9. _Research data repositories should allow researchers to correct and update the metadata of datasets._
-10. _Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the datasets DataCite metadata._
-11. _In research data repositories, licences should be grouped into research data licences and software licences._
-12. _Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice._
-13. _Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can inhibit reuse._
-14. _Research data repositories should label fields for creators in their (DataCite) metadata editor as* Authors/Creators._
+9. _Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to a single article that is to be published._
+10. _Research data repositories should provide access to datasets under review._
+11. _URLs to access datasets under review should have the access credentials encoded within the URL._
+12. _Research data repositories should allow researchers to correct and update the metadata of datasets._
+13. _Datasets published with an embargo period should have inaccessible data but accessible metadata._
+14. _Research data repositories should contribute and use to Scholix.org._
+
 
 
 ---
