fix internal links

--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -11,7 +11,7 @@ This guide is based on our **standards for data publishing for authors**. You ca
 
 ## 1. Upload your Dataset
 
-Once you have ensured your data is [well-organized](/data_organisation) and you have chosen appropiate [data formats](/format_standards), you can upload your files. Depending on the [repository you have chosen](/choose_repository), it may be easiest to directly upload your data when creating the dataset. For example, [RADAR4Chem](https://radar4chem.radar-service.eu/) will automatically extract all files from a zip file at this point and replicate the directory structure, while this is not the case if the data is uploaded at a later point in time and an empty dataset is created first.
+Once you have ensured your data is [well-organized](/docs/data_organisation) and you have chosen appropiate [data formats](/docs/format_standards), you can upload your files. Depending on the [repository you have chosen](/docs/choose_repository), it may be easiest to directly upload your data when creating the dataset. For example, [RADAR4Chem](https://radar4chem.radar-service.eu/) will automatically extract all files from a zip file at this point and replicate the directory structure, while this is not the case if the data is uploaded at a later point in time and an empty dataset is created first.
 
 Including a plain-text README file within your dataset can give more human-readable context to your data. You may also include additional metadata files if you feel the options offered by the repository are insufficient to give the full context to your dataset.
 
@@ -25,7 +25,7 @@ These identifiers help improve the visibility of your work.
 
 ## 3. Use Persistent Identifiers (PIDs)
 
-When you deposit your research data, it will be assigned a [**persistent identifier (PID)**](/pid), similarly to how your article is designated a DOI (Digital Object Identifier). In many cases, the dataset's PID will be a [DataCite](https://datacite.org/) DOI. Here’s how to use it:
+When you deposit your research data, it will be assigned a [**persistent identifier (PID)**](/docs/pid), similarly to how your article is designated a DOI (Digital Object Identifier). In many cases, the dataset's PID will be a [DataCite](https://datacite.org/) DOI. Here’s how to use it:
 
 - **For Your Own Datasets:** Include the PID in the [data availability statement](/docs/data_availability_statement) of your article, which informs readers where they can find your underlying data. Also, add this PID in the references section of your manuscript to cite it specifically within the text.
   
@@ -55,7 +55,7 @@ If you are working with multiple datasets relevant to one article, consider usin
 
 ## 6. Choose a License for Your Data
 
-When publishing your research data, it is essential to choose an appropriate [license](/licences). A license outlines how others can use, share, and build upon your work. Here are some key points to consider when selecting a license:
+When publishing your research data, it is essential to choose an appropriate [license](/docs/licences). A license outlines how others can use, share, and build upon your work. Here are some key points to consider when selecting a license:
 
 ### Why Licensing Matters
 
