--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -23,7 +23,7 @@ Repositories should inform authors about possible rights conflicts when using re
 
 ## 4. Group Licenses According to Type
 
-[Licenses](/licences) offered by research data repositories should be grouped into categories distinguishing between research data licenses and software licenses; this simplifies selection processes for users navigating lengthy lists.
+[Licenses](/docs/licences) offered by research data repositories should be grouped into categories distinguishing between research data licenses and software licenses; this simplifies selection processes for users navigating lengthy lists.
 
 ## 5. Encourage Creative Commons Licenses 
 
