--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -16,7 +16,7 @@ To assist authors in selecting **well-established and community-specific [reposi
 
 ## 2. Include Data Availability Statements
 
-Journals should encourage authors to provide a [**data availability statement**](/docs/data_availability_statement) in their manuscripts. To facilitate this, [templates](/docs/data_availability_statement/#templates-for-data-availability-statements) should be made available in the journal's author guidelines or similar sections. These templates help authors correctly submit underlying data with their manuscript while effectively communicating how to find and access the data by including DOIs or other [PIDs](/pid), thereby enabling adherence to [FAIR principles]((/docs/fair/)) (e.g., [A1](/docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)).
+Journals should encourage authors to provide a [**data availability statement**](/docs/data_availability_statement) in their manuscripts. To facilitate this, [templates](/docs/data_availability_statement/#templates-for-data-availability-statements) should be made available in the journal's author guidelines or similar sections. These templates help authors correctly submit underlying data with their manuscript while effectively communicating how to find and access the data by including DOIs or other [PIDs](/docs/pid), thereby enabling adherence to [FAIR principles]((/docs/fair/)) (e.g., [A1](/docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)).
 
 ## 3. Integrate Data Availability Statements into Submission Systems
 
