--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -7,11 +7,11 @@ slug: "/publishing_standards_authors"
 
 As a researcher in chemistry, sharing the data underlying your published results is crucial for advancing science and ensuring your work is accessible to und can be understood by others. This guide will walk you through the essential steps and considerations for publishing your research data alongside a published paper effectively.
 
-This guide is based on our **standards for data publishing for authors**. You can view the full list of standards [at the end of this article](#standards-authors-list)
+This guide is based on our **standards for data publishing for authors**. You can view the full list of standards [at the end of this article](#standards-authors-list).
 
 ## 1. Upload your Dataset
 
-Once you have ensured your data is [well-organized](/docs/data_organisation) and you have chosen appropiate [data formats](/docs/format_standards), you can upload your files. Depending on the [repository you have chosen](/docs/choose_repository), it may be easiest to directly upload your data when creating the dataset. For example, [RADAR4Chem](https://radar4chem.radar-service.eu/) will automatically extract all files from a zip file at this point and replicate the directory structure, while this is not the case if the data is uploaded at a later point in time and an empty dataset is created first.
+Once you have ensured your data is [well-organized](/docs/data_organisation) and you have chosen appropriate [data formats](/docs/format_standards), you can upload your files. Depending on the [repository you have chosen](/docs/choose_repository), it may be easiest to directly upload your data when creating the dataset. For example, [RADAR4Chem](https://radar4chem.radar-service.eu/) will automatically extract all files from a zip file at this point and replicate the directory structure, while this is not the case if the data is uploaded at a later point in time and an empty dataset is created first.
 
 Including a plain-text README file within your dataset can give more human-readable context to your data. You may also include additional metadata files if you feel the options offered by the repository are insufficient to give the full context to your dataset.
 
@@ -63,7 +63,7 @@ Licensing is crucial because it sets the rules for how others can interact with 
 
 ### Creative Commons Licenses
 
-[Creative Commons licenses](hhttps://creativecommons.org/share-your-work/cclicenses/) are widely used for sharing research data and come in various forms:
+[Creative Commons licenses](https://creativecommons.org/share-your-work/cclicenses/) are widely used for sharing research data and come in various forms:
   - **[CC BY](https://creativecommons.org/licenses/by/4.0/)**: Allows others to distribute, remix, adapt, and build upon your work, even commercially, as long as they credit you.
   - **[CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/)**: Similar to CC BY but requires new creations to carry the same license.
   - **[CC BY-NC](https://creativecommons.org/licenses/by-nc/4.0/)**: Allows others to use your work non-commercially while still requiring attribution.
