fix small typos

--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -6,7 +6,7 @@ slug: "/publishing_standards_publishers"
 
 # A Simple Guide to Supporting Data Publishing
 
-As an academic publisher, promoting data sharing is essential for advancing research and ensuring that findings are accessible to the scientific community. This guide outlines key recommendations and considerations for journals. It aims to assist you in helping researchers succesfully publish the research data underlying their results reported in your journals and to ensure that this data is properly associated to the respective article.
+As an academic publisher, promoting data sharing is essential for advancing research and ensuring that findings are accessible to the scientific community. This guide outlines key recommendations and considerations for journals. It aims to assist you in helping researchers successfully publish the research data underlying their results reported in your journals and to ensure that this data is properly associated to the respective article.
 
 This guide is based on our standards for data publishing for academic publishers. You can view the full list of standards [at the end of this article](#standards-publishers-list).
 
@@ -57,7 +57,7 @@ Journals should encourage inclusion of research data during peer review processe
 As mentioned [above](#5-encourage-pre-submission-of-datasets), to streamline automated workflows linking datasets with published articles through respective PIDs, journals must require that datasets marked _under review_ be published before associated articles are released. Authors should receive **clear communication** regarding this process upon acceptance of their manuscripts.
 
 ### Communication Tips:
-Alongside acceptance notifications, journals should provide authors with corresponding article DOIs so they can include this metadata prior to dataset publication.
+Alongside acceptance notifications, journals should provide authors with corresponding article DOI so they can include this metadata prior to dataset publication.
 
 ## 8. Utilize Scholix.org Framework
 
