--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -31,7 +31,7 @@ To streamline license selection, infrastructure providers should direct authors 
 
 ## 6. Promote Least Restrictive Creative Commons Licenses 
 
-To foster openness within shared datasets—repositories ought suggest licenses (such as [CC0](https://creativecommons.org/publicdomain/zero/1.0/) or [CC BY](https://creativecommons.org/licenses/by/4.0/)) on handling data over more restrictive alternatives like [CC BY-SA](https://creativecommons.org/licenses/by-nc/4.0/) or [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) which may inhibit reuse opportunities; shared works ought be **as open as possible**, allowing others maximum freedom in utilization efforts!
+To foster openness within shared datasets, repositories ought to suggest licenses on handling data such as [CC0](https://creativecommons.org/publicdomain/zero/1.0/) or [CC BY](https://creativecommons.org/licenses/by/4.0/) over more restrictive alternatives like [CC BY-SA](https://creativecommons.org/licenses/by-nc/4.0/) or [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) which may inhibit reuse opportunities; shared works ought to be **as open as possible**, allowing others maximum freedom in utilization efforts!
 
 ## 7. Creators, Authors, and Contributors 
 
@@ -63,7 +63,7 @@ Research data repositories should provide a Collection DOI that wraps relevant r
 
 ## 10. Provide Access to Read-Only Datasets Under Review
 
-To facilitate inclusion of datasets in manuscript review processes, research data repositories should provide access to datasets under review through an accessible URL while maintaining non-editable status until publication occurs.
+To facilitate inclusion of datasets in manuscript review processes, research data repositories should provide access to datasets under review through an accessible URL while maintaining non-editable status until the review has been completed.
 
 ## 11. Utilize URLs for Reviewer Access 
 
