adjust title wording

--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -77,7 +77,7 @@ Research data repositories should permit researchers to correct and update metad
 
 Datasets published under an embargo period should restrict access to the dataset while ensuring that its metadata remain accessible—*publish* with embargo. This practice allows relevant information about the dataset to be retrievable, in accordance to [FAIR principles](/docs/fair/) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while granting authors first rights to their data.
 
-## 14. Utilize Scholix.org Framework
+## 14. Contribute to and Use Scholix.org Framework
 
 Research data repositories should contribute to and utilize [Scholix.org](https://scholexplorer.openaire.eu/) as it provides a framework for improving links between scientific literature and research data across various digital objects. Scholix hubs such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/) contribute valuable information on connected digital objects, allowing academic publishers to discover corresponding datasets even after articles have been published.
 
