--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -10,6 +10,9 @@ As an academic publisher, promoting data sharing is essential for advancing rese
 
 This guide is based on our standards for data publishing for academic publishers. You can view the full list of standards [at the end of this article](#standards-publishers-list).
 
+![a flowchart for data publishing for academic publishers](/img/data_pub/academic_publishers.png)
+
+
 ## 1. Recommend Trusted, Chemistry-Friendly Repositories
 
 To assist authors in selecting **well-established and community-specific [repositories](docs/repositories)** for their research data, it is important for journals to recommend trusted [chemistry-friendly repositories](docs/choose_repository). This information should be included within the author guidelines or data policies to assist researchers during the publication process.
