--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -10,7 +10,7 @@ As a researcher in chemistry, sharing the data underlying your published results
 This guide is based on our **standards for data publishing for authors**. You can view the full list of standards [at the end of this article](#standards-authors-list).
 
 
-![a flowchart for data publishing fro authors](/img/data_pub/authors.png)
+![a flowchart for data publishing for authors](/img/data_pub/authors.png)
 
 ## 1. Upload your Dataset
 
