--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -9,7 +9,7 @@ As an infrastructure provider, facilitating data sharing is vital for enhancing 
 
 This guide is based on our standards for data publishing for infrastructure providers. You can view the full list of standards [at the end of this article](#standards-infrastructure-list).
 
-![a flowchart for data publishing for infrstructure providers](/img/data_pub/infrastructure_providers.png)
+![a flowchart for data publishing for infrastructure providers](/img/data_pub/infrastructure_providers.png)
 
 ## 1. Metadata Should Be Part of a Dataset
 
