fix: remove chip because of no entries

--- a/docs/10_domains/20_electrochemistry.mdx
+++ b/docs/10_domains/20_electrochemistry.mdx
@@ -7,7 +7,6 @@ import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
 import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="physical chemistry" />
-<LbeChip title="electrochemistry" />
 
 ## Introduction
 
@@ -20,13 +19,13 @@ Conceptually, the main data type in electrochemistry consists of time series dat
 and current (current density), including the measurement time.
 For AC methods also the frequency, the impedance and the phase angle are relevant.
 These data are most simply stored as CSV, but are often only available in non-standard file formats.
-Often additional techniques are employed *operando* to gain more detailed insights into the origin of the measured charge transfer
+Often additional techniques are employed _operando_ to gain more detailed insights into the origin of the measured charge transfer
 processes and other non-measurable (chemical) processes occurring concomitantly at the electrodes, in the electrolyte, or the interfaces,
 such as IR-spectroscopy, mass spectrometry or diffraction methods.
 This data is often stored along with the values from the electrochemical measurements.
 
 Additionally, imaging data can be obtained from purely electrochemical techniques such as scanning electrochemical microscopy (SECM) or indirectly,
-when combined with other methods such as *in situ* electrochemical scanning tunneling microscopy (*in situ* STM).
+when combined with other methods such as _in situ_ electrochemical scanning tunneling microscopy (_in situ_ STM).
 Further data evaluation can yield any kind of time series data or imaging data.
 
 ## ELNs and Other Tools
