--- a/docs/10_domains/20_electrochemistry.mdx
+++ b/docs/10_domains/20_electrochemistry.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Electrochemistry"
-slug: "/electro_chemistry"
+slug: "/electrochemistry"
 ---
 
 import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
